2014-04-19  Filip Pizlo  <fpizlo@apple.com>

        Make it easier to check if an integer sum would overflow
        https://bugs.webkit.org/show_bug.cgi?id=131900

        Reviewed by Darin Adler.

        * wtf/CheckedArithmetic.h:
        (WTF::checkedSum):
        (WTF::sumOverflows):

2014-03-10  Jer Noble  <jer.noble@apple.com>

        Improve WeakPtr operators.
        https://bugs.webkit.org/show_bug.cgi?id=130053

        Reviewed by Andreas Kling.

        Replace the "operator!()" with an explicit bool operator.  Add an "operator->()".

        * wtf/WeakPtr.h:
        (WTF::WeakPtr::operator bool):
        (WTF::WeakPtr::operator->):

2014-02-19  Jon Honeycutt  <jhoneycutt@apple.com>

        Crash in WTF::StringBuilder::append()

        https://bugs.webkit.org/show_bug.cgi?id=125817
        <rdar://problem/15671883>

        Reviewed by Oliver Hunt.

        * wtf/text/StringBuilder.cpp:
        (WTF::expandedCapacity):
        Ensure that we return a new capacity of at least 'requiredLength' in
        the case where requiredLength is large. Also, use unsigned rather than
        size_t for the parameters and the return value, as callers pass
        unsigned arguments and treat the result as an unsigned int.

2014-02-17  Ryan Lortie  <desrt@desrt.ca>

        Enable DFG_JIT on FreeBSD
        https://bugs.webkit.org/show_bug.cgi?id=128898

        Reviewed by Csaba Osztrogonác.

        * wtf/Platform.h:

2014-02-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Add GUniqueOutPtr and use it instead of GOwnPtr
        https://bugs.webkit.org/show_bug.cgi?id=127554

        Reviewed by Gustavo Noronha Silva.

        GUniqueOutPtr is a simplified version of GOwnPtr for the cases
        where we need the address of the contained pointer. GUniqueOutPtr
        uses GUniquePtr to free the contained object and to release the
        container pointer. The API is very simple to make sure this is