@@ -255,4 +255,5 @@ wtf_sources += \
     Source/WTF/wtf/unicode/Unicode.h \
     Source/WTF/wtf/unicode/UnicodeMacrosFromICU.h \
     Source/WTF/wtf/unicode/icu/CollatorICU.cpp \
-    Source/WTF/wtf/unicode/icu/UnicodeIcu.h
+    Source/WTF/wtf/unicode/icu/UnicodeIcu.h \
+    Source/WTF/wtf/win/GDIObject.h
